--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
     margin: 0;
     padding: 0; 
     font-family: Arial, Helvetica, sans-serif;
-    /* background-color: black; */
-    
 }
 /* navbar */
+
+
+
 .navbar{
     height: 60px;
     background-color: #131921;
@@ -23,6 +24,13 @@
     border-radius: 2px;
 }
 .border:hover{
+    border: 1px solid #fff;
+}
+.border2{
+    border: 1px solid transparent;
+    border-radius: 2px;
+}
+.border2:hover{
     border: 1px solid #fff;
 }
 .pointer{
@@ -149,4 +157,265 @@
     font-weight: 700;
     margin-top: 20px;
     margin-left: 4px;
+}
+
+
+/*Navbar option*/
+
+.navbar-opt{
+    background-color: #232f3e;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.menu-btn{
+    display: flex;
+    margin-left: 1rem;
+    padding-inline: 9px;
+}
+.menu-btn{
+    display: flex;
+}
+.menu-btn i{
+    font-size: 21px;
+
+}
+.prime{
+    display: flex;
+}
+.navbar-opt div{
+    display: flex;
+    align-items: center;
+}
+.navbar-opt p{
+    font-size: 14px;
+    padding: 0 5px;
+    height: 38px;
+    display: flex;
+    align-items: center;
+}
+.options{
+    width: 70%;
+    /* display: flex; */
+}
+
+/* Main */
+
+main{
+    background: gainsboro;
+    overflow-x: hidden;
+}
+
+
+.bg{
+    background-image: url(img/bg.jpg);
+    height: 600px;
+    background-size: cover;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100vw;
+    padding-top: 250px;
+}
+
+.container2{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100vw;
+    padding-top: 20px;
+}
+
+.box{
+    height: 350px;
+    width: 23vw;
+    background-color: #ffffff; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+}
+
+.pTop{
+    width: 90%;
+    height: 50px;
+    margin: 15px;
+}
+
+.pTop p{
+    font-size: 23px;
+    font-weight: 500;
+}
+
+.boxImg{
+    width: 88%;
+}
+
+.boxImg img{
+    width: 100%;
+}
+
+.boxImgs{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.boxImgs img{
+    width: 50%;
+    padding: 5px;
+}
+
+.pBottom{
+    width: 90%;
+    padding: 10px 0;
+}
+
+.pBottom p{
+    font-size: 14px;
+    color: #74ced4;
+}
+
+.pBottom p:hover{
+    color: #C7511F;
+}
+
+/* footer */
+
+.backToTop{
+    height: 50px;
+    font-size: 13px;
+    background-color: #314257;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.backToTop:hover{
+    background-color: #485769;
+}
+
+.backToTop a{
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.footerOption{
+    background-color: #232F3E;
+    height: 340px;
+    display: flex;
+    color: #dddddd;
+    justify-content: space-evenly;
+    font-size: 14px;
+    padding: 0 50px;
+}
+.footerOption div{
+    margin-top: 40px;
+}
+.footerOption div p{
+    margin-top: 12px;
+}
+.footerOption div p:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.footerOption div :first-child{
+    font-weight: bold;
+    color: #fff;
+    font-size: 15px;
+}
+
+.footerOption div :first-child:hover{
+    cursor: text;
+    text-decoration: none;
+}
+
+
+.country-container{
+    border-top: 0.1px solid #dddddd;
+    display: flex;
+    background-color: #232F3E;
+    color: #dddddd;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 160px;
+}
+
+.btn{
+    margin-top: 20px;
+}
+
+button{
+    background-color: transparent;
+    color: #dddddd;
+    padding: 10px 37px;
+    border-radius: 2px;
+    border: 0.2px solid #dddddd;
+    cursor: pointer;
+}
+
+.countrys{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 70vw;
+    margin: 20px;
+}
+
+.countrys p{
+    margin: 0 5px;
+    font-size: 13px;
+    cursor: pointer;
+}
+.countrys p:hover{
+    text-decoration: underline;
+}
+
+.footer-other-services{
+    background-color: #131A22;
+    color: #999999;
+}
+
+.other-services-content{
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+    gap: 100px;
+    padding: 20px 0;
+}
+
+.content-box div:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.headerP{
+    color: #dddddd;
+}
+
+.footerEnd{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 12px;
+    color: #dddddd;
+    padding: 30px 0;
+}
+
+.footerEnd div{
+    display: flex;
+    gap: 15px;
+}
+
+.footerEnd :last-child{
+    padding-top: 3px;
 }
